# RaveEngine-Game

./: .gitignore  Cargo.toml  NewProject.rave  README.md
.github/workflows/: ci.yml
assets/content/game/character/: Avatar.glb  Head.mtl  LeftArm.mtl  LeftLeg.mtl  RightArm.mtl  RightLeg.mtl  Torso.mtl
assets/content/game/ui/: main.vuis
assets/maps/: temp_playtest.vrtx
assets/shaders/: studs.wgsl
scripts/: bench.ps1
src/: lib.rs  main.rs
src/app/client/: bootstrap.rs  config.rs  mod.rs  network_boot.rs
src/app/common/: log.rs
src/app/server/: bootstrap.rs  config.rs  mod.rs
src/client/: mod.rs  ui.rs
src/client/player/: animation.rs  camera.rs  controller.rs  loader.rs  mod.rs  play_camera.rs
src/client/player/model/: mod.rs
src/client/ui/: chat_container.rs  chatbox.rs  health.rs  scoreboard.rs  visuals.rs
src/common/: mod.rs  network.rs  performance.rs  physics.rs  vrtx.rs
src/common/bricks/: components.rs  data.rs  mod.rs  studs.rs
src/common/core/: bench.rs  mod.rs  performance.rs  vrtx.rs
src/common/environment/: clouds.rs  horizon.rs  mod.rs  sky.rs  sun.rs
src/common/game/: mod.rs  physics.rs
src/common/net/: auth.rs  components.rs  messages.rs  mod.rs
src/common/ui/: mod.rs
src/common/vuis/: api.rs  mod.rs
src/scripting/: ecs.rs  mod.rs  plugin.rs
src/scripting/runtime/: globals.rs  mod.rs  require.rs
src/scripting/services/: lighting.rs  mod.rs  players.rs  run_service.rs  workspace.rs
src/scripting/userdata/: cframe.rs  color3.rs  instance.rs  mod.rs  vector3.rs
src/scripting/vm/: client_vm.rs  compiler.rs  mod.rs  scheduler.rs  server_vm.rs  studio_vm.rs
src/server/: map.rs  mod.rs  player.rs
src/studio/: bricks.rs  camera.rs  gizmos.rs  mod.rs  tools.rs  ui.rs
src/studio/ui/: assets.rs  indicator.rs  resources.rs  visuals.rs
(+35 files in other folders)
