[package]
name = "VERTIGO-ProjectRave"
version = "0.1.0"
edition = "2024"

[lib]
name = "RaveEngineLib"
path = "src/lib.rs"

[[bin]]
name = "RaveEngineStudio"
path = "src/bin/studio.rs"

[[bin]]
name = "RaveEngineClient"
path = "src/bin/client.rs"

[dependencies]
bevy = { version = "0.19.0", features = ["default", "free_camera", "bevy_dev_tools"] }
bevy_egui = "0.40.1"
rand = "0.10.1"
avian3d = "0.7.0"
tobj = "4.0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3