[package]
name = "VERTIGO-ProjectRave"
version = "0.1.0"
edition = "2024"

[lib]
name = "RaveEngineLib"
path = "src/lib.rs"

[[bin]]
name = "RaveEngineStudio"
path = "src/bin/studio.rs"

[[bin]]
name = "RaveEngineClient"
path = "src/bin/client.rs"

[[bin]]
name = "RaveEngineServer"
path = "src/bin/server.rs"

[dependencies]
bevy = { version = "0.19.0", features = ["default", "free_camera", "bevy_dev_tools"] }
bevy_egui = "0.40.1"
egui_extras = { version = "0.34", features = ["syntect"] }
rand = "0.10.1"
avian3d = "0.7.0"
tobj = "4.0.4"
rfd = "0.17.2"
lightyear = { version = "0.28.0", default-features = false, features = [
  "std",
  "client",
  "server",
  "replication",
  "prediction",
  "interpolation",
  "udp",
  "netcode",
  "input_native"
] }

serde = { version = "1.0", features = ["derive"] }
bevy_replicon = "0.41.1"
zstd = "0.13"
serde_json = "1.0"
base64 = "0.22.1"
flate2 = "1.0"
mlua = { version = "0.12", features = ["luau", "luau-jit", "send", "serde", "macros"] }

[features]
bench = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3